--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord-api-types": "^0.34.0",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "redis": "^4.3.1"
   }
 }
